# libgp-1

./: .gitignore  CMakeLists.txt  FindEigen3.cmake  FindSpiralWHT.cmake  Sources.cmake
benchmarks/: CMakeLists.txt  Sources.cmake  bf.cc  bf_multi_scale.cc  gp_deg.cc  gp_fic.cc  gp_full.cc  misc_matrix_multiplications.cc  symmetric_matrix_multiplication.cc
benchmarks/naive/: bf_fast_food_naive.cc  bf_fast_food_naive.h  bf_multi_scale_naive.cc  bf_multi_scale_naive.h  bf_solin_naive.cc  bf_solin_naive.h  gp_deg_naive.cc  gp_deg_naive.h  gp_fic_naive.h
benchmarks/util/: time_call.cc  time_call.h
examples/: CMakeLists.txt  gp_example_approximate.cc  gp_example_dense.cc
gpml/: .gitignore  bfmex.cc  bfmexgradient.cc  defineCompilationEnv.m  infFastFoodmex.cc  infLibGPmex.cc  infSMmex.cc  infSolinmex.cc  makeBFgradientmex.m  makeBFmex.m  makeFICfixedRPropmex.m  makeRPropmex.m  makeToyExp2.m  makeinfFastFood.m  makeinfFastFoodmex.m  makeinfLibGPmex.m  makeinfSM.m  makeinfSolin.m  rpropFixedFICmex.cc  rpropmex.cc  toyExpTwo.cc
gpml/experiment/: toy_exp2.cc
gpml/util/: util.cc
include/: abstract_gp.h  cov.h  cov_noise.h  cov_se_ard.h  cov_sum.h  fic_gp.h  gp.h  gp_deg.h  gp_fic.h  gp_fic_optimized.h  gp_multiscale_optimized.h  gp_solin.h  gp_utils.h  rprop.h  sampleset.h
include/basis_functions/: IBasisFunction.h  basisf_factory.h  bf_fast_food.h  bf_fic.h  bf_fic_fixed.h  bf_multi_scale.h  bf_solin.h
src/: abstract_gp.cc  cov.cc  cov_factory.cc  cov_matern3_iso.cc  cov_matern5_iso.cc  cov_noise.cc  cov_periodic_matern3_iso.cc  cov_se_ard.cc  cov_sum.cc  fic_gp.cc  gp.cc  gp_deg.cc  gp_fic.cc  gp_fic_naive.cc  gp_fic_optimized.cc  gp_multiscale_optimized.cc  gp_solin.cc  gp_utils.cc  rprop.cc  sampleset.cc
src/basis_functions/: basisf_factory.cc  bf_fast_food.cc  bf_fic.cc  bf_fic_fixed.cc  bf_multi_scale.cc  bf_solin.cc
tests/: Sources.cmake  gp_derivative_tests.cc  log_likelihood_test.cc  test_basis_functions.cc  test_covariance_functions.cc  test_optimizer.cc
